Environment variable exporting in .envrc

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,17 @@
 layout python3
+
 export FLASK_ENV=development
 export FLASK_APP=app.py
 export FLASK_DEBUG=1
+
+export BROKER_USERNAME=user
+export BROKER_PASSWORD=password
+export BROKER_HOSTNAME=localhost
+export BROKER_PORT=5672
+
+export PG_USER=postgres
+export PG_PASSWORD=dbpw
+export PG_HOST=localhost
+export PG_PORT=5432
+export PG_DBNAME=feedaggregator
+
