--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,7 @@
 layout python3
 
 export FLASK_ENV=development
-export FLASK_APP=app.py
+export FLASK_APP=application.py
 export FLASK_DEBUG=1
 
 export BROKER_USERNAME=user
