--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ psycopg2-binary==2.8.6
 py==1.9.0
 pycparser==2.20
 PyNaCl==1.4.0
+pyOpenSSL==19.1.0
 pyparsing==2.4.7
 pytest==6.0.2
 python-dateutil==2.8.1
