--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask-Migrate==2.5.3
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 flask-swagger-ui==3.25.0
+gunicorn==20.0.4
 html5lib==1.1
 idna==2.10
 importlib-metadata==1.7.0
