--- a/.envrc
+++ b/.envrc
@@ -2,16 +2,14 @@ layout python3
 
 export FLASK_ENV=development
 export FLASK_APP=application.py
-export FLASK_DEBUG=1
 
 export BROKER_USERNAME=user
 export BROKER_PASSWORD=password
 export BROKER_HOSTNAME=localhost
 export BROKER_PORT=5672
 
-export PG_USER=postgres
-export PG_PASSWORD=dbpw
+export POSTGRES_USER=postgres
+export POSTGRES_PASSWORD=dbpw
 export PG_HOST=localhost
 export PG_PORT=5432
-export PG_DBNAME=feedaggregator
-
+export POSTGRES_DB=feedaggregator
