--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ version: '3.0'
 
 services:
   storage:
+    build: docker/postgres
     container_name: postgres
-    image: postgres:12.4
+    image: rss_postgres:1.0.0
     volumes:
       - db_data:/var/lib/postgresql/data
     env_file:
